--- a/src/site/xdoc/manual/jmx.xml.vm
+++ b/src/site/xdoc/manual/jmx.xml.vm
@@ -54,7 +54,7 @@
         used to monitor your application. Start JConsole by typing
         <code>${dollar}JAVA_HOME/bin/jconsole</code> in a command shell.
         For more details, see Oracle's documentation on
-        <a href="http://docs.oracle.com/javase/7/docs/technotes/guides/management/jconsole.html">how to use JConsole</a>.</p>
+        <a href="https://docs.oracle.com/javase/7/docs/technotes/guides/management/jconsole.html">how to use JConsole</a>.</p>
         </subsection>
 		<subsection name="Remote Monitoring and Management">
       <a name="Remote" />
@@ -66,14 +66,14 @@
         which you want to enable JMX RMI connections.
         </p><p>
         For more details, see Oracle's documentation on
-        <a href="http://docs.oracle.com/javase/7/docs/technotes/guides/management/agent.html#gdenl">Remote
+        <a href="https://docs.oracle.com/javase/7/docs/technotes/guides/management/agent.html#gdenl">Remote
         Monitoring and Management</a>.</p>
         </subsection>
 		<subsection name="RMI impact on Garbage Collection">
       <a name="RMI_GC" />
       <p>
       	Be aware that RMI by default triggers a full GC every hour.
-        See the <a href="http://docs.oracle.com/javase/7/docs/technotes/guides/rmi/sunrmiproperties.html">Oracle
+        See the <a href="https://docs.oracle.com/javase/7/docs/technotes/guides/rmi/sunrmiproperties.html">Oracle
         documentation</a> for the <code>sun.rmi.dgc.server.gcInterval</code> and <code>sun.rmi.dgc.client.gcInterval</code> properties.
         The default value of both properties is 3600000 milliseconds (one hour). Before Java 6, it was one minute.
 		  </p><p>
@@ -168,7 +168,7 @@ com.sun.management.jmxremote.ssl=false</pre>
 		<p><b>(Note that this disables <em>all</em> security so this is not recommended
 		for production environments.
 		Oracle's documentation on
-        <a href="http://docs.oracle.com/javase/7/docs/technotes/guides/management/agent.html#gdenl">Remote
+        <a href="https://docs.oracle.com/javase/7/docs/technotes/guides/management/agent.html#gdenl">Remote
         Monitoring and Management</a> provides details on how to configure
         JMX more securely with password authentication and SSL.)</b></p>
 		<p>Then you can run the client with this command:</p>
