[LOG4J2-3418] Fix Log4j2CloudConfigLoggingSystem registration
This PR adds support for the `spring.factories` registration method of
the `Log4j2CloudConfigLoggingSystem` to replace the old Java system
properties injection method.

A Log4j 2.x `log4j2.disableCloudConfigLoggingSystem` property is added
to enable a choice between the `Log4j2CloudConfigLoggingSystem` and
`Log4j2LoggingSystem`.

--- a/src/site/xdoc/manual/configuration.xml.vm
+++ b/src/site/xdoc/manual/configuration.xml.vm
@@ -2878,6 +2878,12 @@ public class AwesomeTest {
       that advertises the same language(s) in order for scripting to be enabled. If no languages are specified, which is
       the default, the ScriptManager will not be installed.</td>
   </tr>
+    <tr>
+    <td><a name="log4j2.disableCloudConfigLoggingSystem"/>log4j2.disableCloudConfigLoggingSystem</td>
+    <td></td>
+    <td></td>
+    <td>Disables the usage of the Spring Boot <tt>Log4j2CloudConfigLoggingSystem</tt>. Defaults to <tt>false</tt>.</td>
+  </tr>
 </table>
 
         </subsection>
