--- a/src/site/xdoc/manual/configuration.xml.vm
+++ b/src/site/xdoc/manual/configuration.xml.vm
@@ -368,7 +368,7 @@ public class Bar {
           </p>
         </subsection>
         <a name="Configuration From a URI"/>
-        <subsection name="Configuraton From a URI">
+        <subsection name="Configuration From a URI">
           <p>
             When <code>log4j2.configurationFile</code> references a URL Log4j will first determine if the URL reference
             a file using the file protocol. If it does Log4j will validate that the file url is valid and continue
