--- a/src/site/xdoc/manual/layouts.xml.vm
+++ b/src/site/xdoc/manual/layouts.xml.vm
@@ -1742,7 +1742,7 @@ WARN  [main]: Message 2</pre>
               </td>
               <td>
                 <p>Uses ANSI escape sequences to style the result of the enclosed pattern. The style can consist of
-                  a comma separated list of style names from the following table.
+                  a whitespace separated list of style names from the following table.
                   (See Jansi <a href="#enable-jansi">configuration</a>.)
                   <table>
                     <tr>
@@ -1851,7 +1851,7 @@ WARN  [main]: Message 2</pre>
                   <pre>%style{%d{ISO8601}}{black} %style{[%t]}{blue} %style{%-5level:}{yellow} %style{%msg%n%throwable}{green}</pre>
                 </p>
 				<p>You can also combine styles:
-                  <pre>%d %highlight{%p} %style{%logger}{bright,cyan} %C{1.} %msg%n</pre>
+                  <pre>%d %highlight{%p} %style{%logger}{bright cyan} %C{1.} %msg%n</pre>
                 </p>
 				<p>You can also use <code>%</code> with a color like <code>%black</code>, <code>%blue</code>, <code>%cyan</code>, and so on. For example:
                   <pre>%black{%d{ISO8601}} %blue{[%t]} %yellow{%-5level:} %green{%msg%n%throwable}</pre>
