--- a/src/site/xdoc/manual/configuration.xml.vm
+++ b/src/site/xdoc/manual/configuration.xml.vm
@@ -649,7 +649,7 @@ public class Bar {
             The concise format makes configuration very easy as the element names match the components they represent
             however it cannot be validated with an XML schema. For example, the ConsoleAppender is configured by
             declaring an XML element named Console under its parent appenders element. However, element
-            and attribute names are are not case sensitive. In addition, attributes can either be specified
+            and attribute names are not case sensitive. In addition, attributes can either be specified
             as an XML attribute or as an XML element that has no attributes and has a text value. So
           </p>
           <pre class="prettyprint"><![CDATA[<PatternLayout pattern="%m%n"/>]]></pre>
