--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -21,7 +21,7 @@
 #set($h3='###')
 #set($h4='####')
 
-$h1 Apache Log4j 2
+$h1 Apache Log4j™ 2
 
 Apache Log4j 2 is an upgrade to Log4j that provides significant improvements over its predecessor, Log4j 1.x, and
 provides many of the improvements available in Logback while fixing some inherent problems in Logback's architecture.
